--- a/operation/roles/helm/tasks/install.yml
+++ b/operation/roles/helm/tasks/install.yml
@@ -1,7 +1,13 @@
 ---
 - name: Download and install helm binary on admin server
+  get_url:
+    url: "{{ HELM_URL }}"
+    dest: /tmp/helm.tar.gz
+    checksum: "sha256:{{HELM_URL_CHECKSUM_SHA256}}"
+  
+- name: Unarchive the helm tar
   unarchive:
-    src: "{{ HELM_URL }}"
+    src: /tmp/helm.tar.gz
     dest: /tmp
     copy: no
 
@@ -11,6 +17,14 @@
     dest: "{{ HELM_PATH }}"
     mode: "0755"
     remote_src: yes
+
+- name: Clean /tmp/helm.tar.gz
+  file:
+    path: "{{ item }}"
+    state: absent
+  with_items:
+  - /tmp/linux-amd64
+  - /tmp/helm.tar.gz
 
 - name: Set permissions for helm binary
   file:
