--- a/operation/playbook-install-tools.yml
+++ b/operation/playbook-install-tools.yml
@@ -8,7 +8,7 @@
     # KUBECTL_VERSION: v1.15.10
     # HELM_VERSION: v3.2.1
   pre_tasks:
-  # ansible require to use python3 as the python2 is end of support
+  # ansible requires python3 as python2 is end of support
   # need to view with team
   - name: Switch Ansible's Python interpreter to Python 2
     set_fact:
