--- a/.github/workflows/azure_cassandra_example.yml
+++ b/.github/workflows/azure_cassandra_example.yml
@@ -22,13 +22,15 @@ jobs:
       ARM_CLIENT_SECRET: ${{ secrets.ARM_CLIENT_SECRET }}
       ARM_SUBSCRIPTION_ID: ${{ secrets.ARM_SUBSCRIPTION_ID }}
       ARM_TENANT_ID: ${{ secrets.ARM_TENANT_ID }}
+      TF_VERSION: 0.12.25
+
     steps:
       - name: 'Checkout'
         uses: actions/checkout@master
       
       - uses: hashicorp/setup-terraform@v1
         with:
-          terraform_version: 0.12.25
+          terraform_version: ${{ env.TF_VERSION }}
       
       - name: Terraform Format
         run: terraform fmt -check
@@ -37,4 +39,4 @@ jobs:
         run: terraform init
 
       - name: Terraform Validate
-        run: terraform validate
+        run: terraform validate -no-color
