--- a/.github/workflows/azure_kubernetes.yaml
+++ b/.github/workflows/azure_kubernetes.yaml
@@ -24,13 +24,15 @@ jobs:
       ARM_CLIENT_SECRET: ${{ secrets.ARM_CLIENT_SECRET }}
       ARM_SUBSCRIPTION_ID: ${{ secrets.ARM_SUBSCRIPTION_ID }}
       ARM_TENANT_ID: ${{ secrets.ARM_TENANT_ID }}
+      TF_VERSION: 0.12.25
+
     steps:
       - name: 'Checkout'
         uses: actions/checkout@master
       
       - uses: hashicorp/setup-terraform@v1
         with:
-          terraform_version: 0.12.25
+          terraform_version: ${{ env.TF_VERSION }}
         
       - name: 'Set up to using dummy local variables'
         run: |
@@ -44,7 +46,7 @@ jobs:
         run: terraform init
 
       - name: Terraform Validate
-        run: terraform validate
+        run: terraform validate -no-color
 
       - name: 'Terraform Plan'
         run: terraform plan --var-file=terraform.tfvars
