--- a/.github/workflows/azure_cassandra_example.yml
+++ b/.github/workflows/azure_cassandra_example.yml
@@ -4,18 +4,18 @@ on:
     branches:
       - master
     paths:
-      - 'examples/azure/cassandra/**'
+      - examples/azure/cassandra/**
   push:
     branches:
       - master
     paths:
-      - 'examples/azure/cassandra/**'
+      - examples/azure/cassandra/**
 defaults:
   run:
     working-directory: ./examples/azure/cassandra
 jobs:
   terraform:
-    name: 'Terraform'
+    name: Terraform
     runs-on: ubuntu-latest
     env:
       ARM_CLIENT_ID: ${{ secrets.ARM_CLIENT_ID }}
@@ -25,10 +25,11 @@ jobs:
       TF_VERSION: 0.12.25
 
     steps:
-      - name: 'Checkout'
+      - name: Checkout
         uses: actions/checkout@master
       
-      - uses: hashicorp/setup-terraform@v1
+      - name: Setup Terraform
+        uses: hashicorp/setup-terraform@v1
         with:
           terraform_version: ${{ env.TF_VERSION }}
       
