--- a/operation/roles/scalarledger/defaults/main.yml
+++ b/operation/roles/scalarledger/defaults/main.yml
@@ -5,6 +5,7 @@ cassandra_replication_factor: 3
 docker_registry: https://index.docker.io/v2/
 docker_username: "{{ lookup('env','DOCKERHUB_USER') }}"
 docker_password: "{{ lookup('env','DOCKERHUB_ACCESS_TOKEN') }}"
+kubernetes_registry_secret_name: reg-docker-secrets
 admin_access_log_path: /dev/stdout
 next_hop_address: scalar-ledger-headless
 internal_domain: default.svc.cluster.local
