--- a/operation/playbook-deploy-scalardl.yml
+++ b/operation/playbook-deploy-scalardl.yml
@@ -1,19 +1,20 @@
 ---
-- name: Deploy Scalar ledger and Envoy in kubernetes
+- name: Deploy Scalar Ledger and Envoy in Kubernetes
   hosts: bastion
   gather_facts: no
   become: no
   # vars:
-  #   default_kubernetes_namespace: default
-  #   local_manifests_folder: ../../../manifests/
-  #   remote_manifests_folder: "/home/{{ ansible_user }}/manifests"
-  #   cassandra_replication_factor: 3
-  #   docker_registry: https://index.docker.io/v2/
-  #   docker_username: "{{ lookup('env','DOCKER_USERNAME') }}"
-  #   docker_password: "{{ lookup('env','DOCKER_PASSWORD') }}"
-  #   admin_access_log_path: /dev/stdout
-  #   next_hop_address: scalar-ledger-headless
-  #   internal_domain: "{{default_kubernetes_namespace}}.svc.cluster.local"
-  #   envoy_tls: false
+    # default_kubernetes_namespace: default
+    # local_manifests_folder: ../../../manifests/
+    # remote_manifests_folder: "/home/{{ ansible_user }}/manifests"
+    # cassandra_replication_factor: 3
+    # docker_registry: "https://index.docker.io/v2/"
+    # docker_username: "{{ lookup('env','DOCKERHUB_USER') }}"
+    # docker_password: "{{ lookup('env','DOCKERHUB_ACCESS_TOKEN') }}"
+    # kubernetes_registry_secret_name: "reg-docker-secrets"
+    # admin_access_log_path: /dev/stdout
+    # next_hop_address: scalar-ledger-headless
+    # internal_domain: default.svc.cluster.local
+    # envoy_tls: false
   roles:
-  - "scalarledger"
+  - "scalardl"
