--- a/operation/manifests/fluentbit/fluent-bit-configmap.yaml
+++ b/operation/manifests/fluentbit/fluent-bit-configmap.yaml
@@ -16,6 +16,7 @@ data:
         HTTP_Server  On
         HTTP_Listen  0.0.0.0
         HTTP_PORT    2020
+        Parsers_File  parsers.conf
 
     @INCLUDE input-kubernetes.conf
     @INCLUDE filter-kubernetes.conf
@@ -45,9 +46,35 @@ data:
         K8S-Logging.Parser  On
         K8S-Logging.Exclude Off
 
+    [FILTER]
+        Name                record_modifier
+        Match               kube.*
+        Record              hostname kubernetes
+
   output-fluentd-monitor.conf: |
     [OUTPUT]
         Name            forward
         Match           *
         Host            ${FLUENT_MONITOR_HOST}
         Port            ${FLUENT_MONITOR_PORT}
+
+  parsers.conf: |
+    [PARSER]
+        Name   json
+        Format json
+        Time_Key time
+        Time_Format %d/%b/%Y:%H:%M:%S %z
+
+    [PARSER]
+        Name        docker
+        Format      json
+        Time_Key    time
+        Time_Format %Y-%m-%dT%H:%M:%S.%L
+        Time_Keep   On
+
+    [PARSER]
+        Name        syslog
+        Format      regex
+        Regex       ^\<(?<pri>[0-9]+)\>(?<time>[^ ]* {1,2}[^ ]* [^ ]*) (?<host>[^ ]*) (?<ident>[a-zA-Z0-9_\/\.\-]*)(?:\[(?<pid>[0-9]+)\])?(?:[^\:]*\:)? *(?<message>.*)$
+        Time_Key    time
+        Time_Format %b %d %H:%M:%S
