--- a/operation/roles/scalarledger/tasks/configuration.yml
+++ b/operation/roles/scalarledger/tasks/configuration.yml
@@ -16,7 +16,7 @@
 
 - name: Template configmap for envoy
   template:
-    src: template/k8s_envoy.yaml.j2
+    src: templates/k8s_envoy.yaml.j2
     dest: "{{ remote_manifests_folder }}/configuration/envoy.yaml"
 
 - name: Add configmap for envoy
@@ -27,7 +27,7 @@
 
 - name: Template configmap for schema for cassandra and ledger
   template:
-    src: template/k8s_create_schema.cql.j2
+    src: templates/k8s_create_schema.cql.j2
     dest: "{{ remote_manifests_folder }}/configuration/create_schema.cql"
 
 - name: Add config for schema for cassandra and ledger
