--- a/operation/manifests/envoy/envoy-deployment.yaml
+++ b/operation/manifests/envoy/envoy-deployment.yaml
@@ -23,13 +23,11 @@ spec:
         app.kubernetes.io/name: envoy
         app.kubernetes.io/version: v1.14.1
     spec:
+      imagePullSecrets:
+      - name: reg-docker-secrets
       containers:
-      - command:
-        - /usr/local/bin/envoy
-        - -c
-        - /etc/envoy/envoy.yaml
-        image: envoyproxy/envoy:v1.14.1
-        imagePullPolicy: IfNotPresent
+      - image: scalarlabs/scalar-envoy:latest
+        imagePullPolicy: Always
         name: envoy
         ports:
         - containerPort: 50051
@@ -54,38 +52,28 @@ spec:
           successThreshold: 1
           timeoutSeconds: 1
         resources: {}
-        volumeMounts:
-        - mountPath: /etc/envoy/envoy.yaml
-          name: envoy-config
-          subPath: envoy.yaml
-          readOnly: true
       restartPolicy: Always
       terminationGracePeriodSeconds: 60
-      volumes:
-      - configMap:
-          defaultMode: 256
-          name: envoy
-        name: envoy-config
       affinity:
         nodeAffinity:
           requiredDuringSchedulingIgnoredDuringExecution:
             nodeSelectorTerms:
-            - matchExpressions:
-              - key: agentpool
-                operator: In
-                values:
-                - scalardlpool
+              - matchExpressions:
+                  - key: agentpool
+                    operator: In
+                    values:
+                      - scalardlpool
         podAntiAffinity:
           preferredDuringSchedulingIgnoredDuringExecution:
-          - podAffinityTerm:
-              labelSelector:
-                matchExpressions:
-                - key: app.kubernetes.io/name
-                  operator: In
-                  values:
-                  - envoy
-              topologyKey: kubernetes.io/hostname
-            weight: 50
+            - podAffinityTerm:
+                labelSelector:
+                  matchExpressions:
+                    - key: app.kubernetes.io/name
+                      operator: In
+                      values:
+                        - envoy
+                topologyKey: kubernetes.io/hostname
+              weight: 50
       tolerations:
         - effect: NoSchedule
           key: kubernetes.io/app
