--- a/operation/manifests/schema/scalardl-schema.yaml
+++ b/operation/manifests/schema/scalardl-schema.yaml
@@ -4,27 +4,24 @@ metadata:
   name: scalardl-schema
   labels:
     app.kubernetes.io/name: scalardl-schema
-    app.kubernetes.io/version: v2.0.5
+    app.kubernetes.io/version: v2.0.6
 spec:
   template:
     metadata:
       labels:
         app.kubernetes.io/name: scalardl-schema
-        app.kubernetes.io/version: v2.0.5
+        app.kubernetes.io/version: v2.0.6
     spec:
+      imagePullSecrets:
+      - name: reg-docker-secrets
       containers:
-      - name: cassandra
-        image: cassandra:3.11
+      - name: schema-import
+        image: scalarlabs/scalar-ledger:2.0.6
         imagePullPolicy: IfNotPresent
         command:
         - /bin/bash 
         - -c 
-        - "echo applying Scalar DL schema && cqlsh ${SCALAR_DB_CONTACT_POINTS} -u ${SCALAR_DB_USERNAME} -p ${SCALAR_DB_PASSWORD} -f /create_schema.cql"
-        volumeMounts:
-        - mountPath: /create_schema.cql
-          name: scalardl-schema-config
-          subPath: create_schema.cql
-          readOnly: true
+        - "echo applying Scalar DL schema && dockerize --template create_schema.cql.tmpl:create_schema.cql && cqlsh --cqlversion=3.4.4 ${SCALAR_DB_CONTACT_POINTS} -u ${SCALAR_DB_USERNAME} -p ${SCALAR_DB_PASSWORD} -f create_schema.cql"
         env:
         - name: SCALAR_DB_CONTACT_POINTS
           value: cassandra-lb.internal.scalar-labs.com
@@ -34,12 +31,9 @@ spec:
           value: cassandra
         - name: SCALAR_DB_PASSWORD
           value: cassandra
+        - name: CASSANDRA_REPLICATION_FACTOR
+          value: '1'
       restartPolicy: Never
-      volumes:
-      - configMap:
-          defaultMode: 256
-          name: scalardl-schema
-        name: scalardl-schema-config
       affinity:
         nodeAffinity:
           requiredDuringSchedulingIgnoredDuringExecution:
