--- a/operation/roles/fluentbit/tasks/configuration.yml
+++ b/operation/roles/fluentbit/tasks/configuration.yml
@@ -3,10 +3,10 @@
 - name: Template Fluentbit daemon set
   template:
     src: templates/fluent-bit-ds.yaml.j2
-    dest: "{{ remote_manifests_folder }}/fluentbit/fluent-bit-ds.yaml"
+    dest: "{{ remote_manifests_directory }}/fluentbit/fluent-bit-ds.yaml"
 
 - name: Template Fluentbit service monitor
   template:
     src: templates/fluent-bit-service-monitor.yaml.j2
-    dest: "{{ remote_manifests_folder }}/fluentbit/fluent-bit-service-monitor.yaml"
+    dest: "{{ remote_manifests_directory }}/fluentbit/fluent-bit-service-monitor.yaml"
   when: fluent_activate_metrics
