rename ci file and reactivate CI path

--- a/.github/workflows/operation_ansible_lint.yml
+++ b/.github/workflows/operation_ansible_lint.yml
@@ -3,13 +3,13 @@ on:
   pull_request:
     branches:
       - master
-    # paths:
-    #   - operation/**
+    paths:
+      - operation/**
   push:
     branches:
       - master
-    # paths:
-    #   - operation/**
+    paths:
+      - operation/**
 
 jobs:
   ansible-lint:
