--- a/operation/roles/prometheus/tasks/copy.yml
+++ b/operation/roles/prometheus/tasks/copy.yml
@@ -1,12 +1,15 @@
 ---
 - name: Create folder on remote server
   file:
-    path: "{{ remote_helm_folder }}"
+    path: "{{ item }}"
     state: directory
     mode: '0755'
+  with_items:
+  - "{{ remote_helm_directory }}"
+  - "{{ remote_helm_directory }}/crds"
 
 - name: Copy file on remote server
   copy:
     src: files/prometheus-custom-values.yaml
-    dest: "{{ remote_helm_folder }}/prometheus-custom-values.yaml"
+    dest: "{{ remote_helm_directory }}/prometheus-custom-values.yaml"
     remote_src: no
