--- a/operation/roles/prometheus/tasks/deploy.yml
+++ b/operation/roles/prometheus/tasks/deploy.yml
@@ -6,17 +6,25 @@
     kind: Namespace
     state: present
 
+- name: Download Custom Ressource Definition
+  get_url:
+    url: "{{ item }}"
+    dest: "{{ remote_helm_directory }}/crds/"
+  loop: "{{ prometheus_crds }}"
+  register: prometheus_crds_path
+
 - name: Deploy Prometheus CRDs
-  shell:
-    #!/bin/bash
-    kubectl apply -f {{ item }}
-  loop: "{{ prometheus_crds }}" 
+  k8s:
+    state: present
+    src: "{{ item.dest }}"
+  with_items: "{{ prometheus_crds_path.results | list }}"
 
 - name: wait Prometheus CRDS install in Kubernetes cluster
   pause:
     seconds: "30"
 
-- name: Deploy prometheus with helm 
-  shell:
-    #!/bin/bash 
-    helm upgrade --install prometheus stable/prometheus-operator --namespace {{ namespace }} --version {{ prometheus_version }} -f {{ remote_helm_folder }}/prometheus-custom-values.yaml
+- name: Deploy/Upgrade prometheus with helm
+  command: >-
+    {{ helm_binary_path }} upgrade --install prometheus stable/prometheus-operator
+    --namespace {{ namespace }} --version {{ prometheus_version }} -f {{ remote_helm_directory }}/prometheus-custom-values.yaml
+  when: deploy_prometheus
