fix loop, image and tag as a var, fix ds - missing selector as apps/v1

--- a/operation/roles/fluentbit/tasks/deploy.yml
+++ b/operation/roles/fluentbit/tasks/deploy.yml
@@ -11,7 +11,7 @@
     state: present
     src: "{{ item }}"
     namespace: "{{ default_kubernetes_namespace }}"
-  with_items:
+  loop:
   - "{{ remote_manifests_directory }}/fluentbit/fluent-bit-configmap.yaml"
   - "{{ remote_manifests_directory }}/fluentbit/fluent-bit-role-binding.yaml"
   - "{{ remote_manifests_directory }}/fluentbit/fluent-bit-role.yaml"
