--- a/operation/roles/fluentbit/defaults/main.yml
+++ b/operation/roles/fluentbit/defaults/main.yml
@@ -4,3 +4,5 @@ remote_manifests_directory: "/home/{{ ansible_user }}/manifests"
 fluent_monitor_host: monitor.internal.scalar-labs.com
 fluent_monitor_port: 24224
 fluent_activate_metrics: yes
+fluent_image: fluent/fluent-bit
+fluent_tag: 1.3.11
