--- a/operation/roles/fluentbit/tasks/copy.yml
+++ b/operation/roles/fluentbit/tasks/copy.yml
@@ -1,12 +1,10 @@
 ---
 - name: Create folder on remote server
   file:
-    path: "{{ item }}"
+    path: "{{ remote_manifests_directory }}/fluentbit"
     state: directory
     mode: '0755'
-  with_items:
-  - "{{ remote_manifests_directory }}"
-  - "{{ remote_manifests_directory }}/fluentbit"
+
 
 - name: Copy manifests
   synchronize:
