--- a/operation/roles/prometheus/tasks/copy.yml
+++ b/operation/roles/prometheus/tasks/copy.yml
@@ -1,12 +1,9 @@
 ---
 - name: Create folder on remote server
   file:
-    path: "{{ item }}"
+    path: "{{ remote_helm_directory }}/crds"
     state: directory
     mode: '0755'
-  with_items:
-  - "{{ remote_helm_directory }}"
-  - "{{ remote_helm_directory }}/crds"
 
 - name: Copy file on remote server
   copy:
