--- a/operation/manifests/envoy/envoy-service.yaml
+++ b/operation/manifests/envoy/envoy-service.yaml
@@ -1,7 +1,7 @@
 apiVersion: v1
 kind: Service
 metadata:
-  name: envoy
+  name: scalar-envoy
 spec:
   ports:
   - name: envoy
@@ -13,7 +13,7 @@ spec:
     protocol: TCP
     targetPort: 50052
   selector:
-    app.kubernetes.io/name: envoy
-    app.kubernetes.io/version: v1.14.1
+    app.kubernetes.io/name: scalar-envoy
+    app.kubernetes.io/version: v1.0.0
   sessionAffinity: None
   type: LoadBalancer
