--- a/operation/manifests/envoy/envoy-deployment.yaml
+++ b/operation/manifests/envoy/envoy-deployment.yaml
@@ -34,10 +34,8 @@ spec:
         env:
         - name: admin_access_log_path
           value: "/dev/stdout"
-        - name: internal_domain
-          value: default.svc.cluster.local
-        - name: scalardl_endpoint_address
-          value: scalar-ledger-headless
+        - name: scalardl_address
+          value: scalar-ledger-headless.default.svc.cluster.local
         - name: envoy_tls
           value: "false"
         livenessProbe:
