--- a/operation/manifests/envoy/envoy-deployment.yaml
+++ b/operation/manifests/envoy/envoy-deployment.yaml
@@ -23,6 +23,8 @@ spec:
         app.kubernetes.io/name: scalar-envoy
         app.kubernetes.io/version: v1.0.0
     spec:
+      imagePullSecrets:
+      - name: reg-docker-secrets
       containers:
       - image: scalarlabs/scalar-envoy:v1.0.0
         imagePullPolicy: IfNotPresent
