--- a/operation/roles/prometheus/tasks/deploy.yml
+++ b/operation/roles/prometheus/tasks/deploy.yml
@@ -10,7 +10,7 @@
   get_url:
     url: "{{ item }}"
     dest: "{{ remote_helm_directory }}/crds/"
-  loop: "{{ prometheus_crds }}"
+  loop: "{{ prometheus_crds_url }}"
   register: prometheus_crds_path
 
 - name: Deploy Prometheus CRDs
