update helm charts and follow manifests

--- a/charts/stable/scalar-envoy/templates/service.yaml
+++ b/charts/stable/scalar-envoy/templates/service.yaml
@@ -3,11 +3,7 @@ kind: Service
 metadata:
   name: {{ include "scalar-envoy.fullname" . }}
   labels:
-{{ include "scalar-envoy.labels" . | indent 4 }}
-  annotations:
-{{- with .Values.service.annotations }}
-{{ toYaml . | indent 4 }}
-{{- end }}
+    {{- include "scalar-envoy.labels" . | nindent 4 }}
 spec:
   type: {{ .Values.service.type }}
   ports:
@@ -16,5 +12,4 @@ spec:
 {{ toYaml $value | indent 6 }}
   {{- end }}
   selector:
-    app.kubernetes.io/name: {{ include "scalar-envoy.name" . }}
-    app.kubernetes.io/instance: {{ .Release.Name }}
+    {{- include "scalar-envoy.selectorLabels" . | nindent 4 }}
