--- a/charts/stable/scalar-envoy/Chart.yaml
+++ b/charts/stable/scalar-envoy/Chart.yaml
@@ -1,7 +1,10 @@
-apiVersion: v1
-appVersion: "1.0"
-deprecated: false
+apiVersion: v2
+name: scalar-envoy
 description: Implementation of Envoy for scalar-ledger. Envoy is an open source edge and service proxy, designed for cloud-native applications.
+type: application
+version: 0.1.0
+appVersion: 1.0
+deprecated: false
 icon: https://scalar-labs.com/wp-content/themes/scalar/assets/img/logo_scalar.svg
 keywords:
 - envoy
@@ -11,5 +14,3 @@ sources: ["https://github.com/envoyproxy/envoy"]
 maintainers:
   - name: Paul Dozancuk
     email: paul.dozancuk@scalar-labs.com
-name: scalar-envoy
-version: 0.1.0
