--- a/charts/stable/scalar-envoy/templates/deployment.yaml
+++ b/charts/stable/scalar-envoy/templates/deployment.yaml
@@ -3,68 +3,64 @@ kind: Deployment
 metadata:
   name: {{ include "scalar-envoy.fullname" . }}
   labels:
-{{ include "scalar-envoy.labels" . | indent 4 }}
+    {{- include "scalar-envoy.labels" . | nindent 4 }}
 spec:
+  minReadySeconds: 120
   replicas: {{ .Values.replicaCount }}
   selector:
     matchLabels:
-      app.kubernetes.io/name: {{ include "scalar-envoy.name" . }}
-      app.kubernetes.io/instance: {{ .Release.Name }}
-      app: envoy
-  {{- with .Values.strategy }}
+      {{- include "scalar-envoy.selectorLabels" . | nindent 6 }}
   strategy:
-    {{- toYaml . | nindent 8 }}
-  {{- end }}
+    rollingUpdate:
+      maxSurge: 0
+      maxUnavailable: 1
+    type: RollingUpdate
   template:
     metadata:
       labels:
-        app.kubernetes.io/name: {{ include "scalar-envoy.name" . }}
-        app.kubernetes.io/instance: {{ .Release.Name }}
-        app: envoy
+        {{- include "scalar-envoy.selectorLabels" . | nindent 8 }}
     spec:
     {{- with .Values.imagePullSecrets }}
       imagePullSecrets:
         {{- toYaml . | nindent 8 }}
     {{- end }}
-      volumes:
-      - configMap:
-          defaultMode: 493
-          name: {{ include "scalar-envoy.fullname" . }}
-        name: envoy-config
       securityContext:
         {{- toYaml .Values.podSecurityContext | nindent 8 }}
+      restartPolicy: Always
+      terminationGracePeriodSeconds: 60
       containers:
         - name: {{ .Chart.Name }}
           securityContext:
             {{- toYaml .Values.securityContext | nindent 12 }}
-          image: "{{ .Values.image.repository }}:{{ .Values.image.tag }}"
+          image: "{{ .Values.image.repository }}:{{ .Chart.AppVersion }}"
           imagePullPolicy: {{ .Values.image.pullPolicy }}
-          command:
-          - /usr/local/bin/envoy
-          - -c
-          - /etc/envoy/envoy.yaml
           ports:
           - containerPort: 50051
-            name: envoy
-            protocol: TCP
           - containerPort: 50052
-            name: envoy-priv
-            protocol: TCP
-          - containerPort: 9901
-            name: envoy-admin
-            protocol: TCP
+          - containerPort: 9001
+          env:
+          - name: admin_access_log_path
+            value: "{{ .Values.envoyConfiguration.admin_access_log_path }}"
+          - name: scalardl_address
+            value: "{{ .Values.envoyConfiguration.scalardl_address }}"
           livenessProbe:
             httpGet:
               path: /ready
-              port: envoy-admin
+              port: 9001
+            failureThreshold: 3
+            initialDelaySeconds: 60
+            periodSeconds: 10
+            successThreshold: 1
+            timeoutSeconds: 1
           readinessProbe:
             httpGet:
               path: /ready
-              port: envoy-admin
-          volumeMounts:
-          - mountPath: /etc/envoy/envoy.yaml
-            name: envoy-config
-            subPath: envoy.yaml
+              port: 9001
+            failureThreshold: 3
+            initialDelaySeconds: 20
+            periodSeconds: 10
+            successThreshold: 1
+            timeoutSeconds: 1
           resources:
             {{- toYaml .Values.resources | nindent 12 }}
       {{- with .Values.nodeSelector }}
