--- a/.github/workflows/operation_ansible_lint.yml
+++ b/.github/workflows/operation_ansible_lint.yml
@@ -4,12 +4,14 @@ on:
     branches:
       - master
     paths:
-      - operation/**
+    - operation/*.yml
+    - operation/roles/**
   push:
     branches:
       - master
     paths:
-      - operation/**
+    - operation/*.yml
+    - operation/roles/**
 
 jobs:
   ansible-lint:
