--- a/operation/roles/scalardl/tasks/main.yml
+++ b/operation/roles/scalardl/tasks/main.yml
@@ -1,5 +1,5 @@
 ---
-# roles scalarledger entry-point
+# roles scalardl entry-point
 - import_tasks: copy.yml
 - import_tasks: configuration.yml
 - import_tasks: schema.yml
